--- a/ssd300_training.ipynb
+++ b/ssd300_training.ipynb
@@ -18,10 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.optimizers import Adam, SGD\n",
-    "from keras.callbacks import ModelCheckpoint, LearningRateScheduler, TerminateOnNaN, CSVLogger\n",
+    "from tensorflow.keras.optimizers import Adam, SGD\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint, LearningRateScheduler, TerminateOnNaN, CSVLogger\n",
     "from keras import backend as K\n",
-    "from keras.models import load_model\n",
+    "from tensorflow.keras.models import load_model\n",
     "from math import ceil\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
